# websocket-chat-server

./: .dockerignore  Cargo.toml  Dockerfile
src/: client.rs  main.rs
